<?xml version="1.0"?>
<package format="2">
  <name>influxdb_store</name>
  <version>0.0.0</version>
  <description>The influxdb_store package</description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
